# Esp32_door_opener_3.16_lcd

./: .gitignore  CMakeLists.txt  Options2Simplified.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
backup/: sdkconfig  sdkconfig.old
components/esp_wifi_bsp/: esp_wifi_bsp.c  esp_wifi_bsp.h  wifi_connection_status.h
components/lcd_bl_pwm_bsp/: lcd_bl_pwm_bsp.c
components/sdcard_bsp/: sdcard_bsp.c  sdcard_bsp.h
main/: CMakeLists.txt  Kconfig.projbuild  app_data.h  idf_component.yml  main copy.c  main.c  user_config.h
main/door_controller/: door_controller.c  door_controller.h  door_controller_http.c  door_controller_http.h  door_controller_ui.c  door_controller_ui.h
main/drv_init/: lcd_init.c  lcd_init.h
main/fonts/: door_opener_text_26.c  door_opener_text_26.h
main/lvgl_init/: lvgl_init.c  lvgl_init.h
main/serial_init/: qr_reader.c  qr_reader.h
reference/: DoorStatus.h  Home.c  LVGL_QrCodeReader_DoorOpener.ino  NetworkHandler.cpp  NetworkHandler.h
